# strava_analisys

./: .dockerignore  .gitignore  .importlinter  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  main.py  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: tests.yaml
src/: access_token.py  activities.py  credentials.py  database.py  encryptor.py  menu_handler.py  oauth_code.py  requests_services.py  strava_api.py  strava_service.py  supabase_db.py  token_handler.py  token_manager.py  utils.py
src/activities/: __init__.py  detailed_activities.py  get_streams.py  last_200_activities.py  one_activity.py
src/auth/: credentials.py  token_handler.py  token_manager.py
src/core/activities/: service.py  utils.py  zones.py
src/core/streams/: csv_exporter.py  exporter.py  fetcher.py  manager.py  processor.py
src/core/streams/exporters/: csv_exporter.py  exporter_interface.py
src/database/: supabase_deleter.py  supabase_reader.py  supabase_writer.py
src/domain/: detailed_activity.py
src/infrastructure/api_clients/: async_http_client.py  async_strava_api.py
src/infrastructure/auth/: credentials.py  oauth_code.py  token_handler.py  token_manager.py
src/infrastructure/database/: supabase_deleter.py  supabase_reader.py  supabase_writer.py
src/infrastructure/encryption/: encryptor.py
src/interfaces/: activities.py  async_http_client.py  console_printer.py  database.py  database_deleter.py  database_reader.py  database_writer.py  encryptor.py  formatter.py  strava_api.py  stream_exporter.py  sync_http_client.py
src/interfaces/api_clients/: async_http_client.py  strava_api.py
src/interfaces/database/: database_deleter.py  database_reader.py
src/interfaces/encryption/: encryptor.py
src/menu/: console_error_handler.py  formatter.py  handler.py  options.py  result_console_printer.py
src/presentation/: cli_entrypoint.py
src/presentation/console_output/: console_error_handler.py  result_console_printer.py
src/presentation/menu/: options.py
src/strava_api/: requests_services.py
src/strava_api/api/: async_strava_api.py  base_strava_api.py  sync_strava_api.py
src/strava_api/api_requests/: async_request.py  base_strava_api.py  sync_request.py
src/strava_api/http/: async_http_client.py  base_http_client.py  http_clients.py  sync_http_client.py
src/utils/: __init__.py  constants.py  exceptions.py  helpers.py  logger_config.py  logging.py  printer_options.py  types.py
test/: test_encryptor.py  test_get_oauth_code.py
tests/: conftest.py  test_access_token.py  test_activities.py  test_credentials.py  test_database.py  test_encryptor.py  test_exceptions.py  test_formatter.py  test_get_oauth_code.py  test_helpers.py  test_http_clients.py  test_logging.py  test_menu.py  test_menu_options.py  test_strava_api.py  test_strava_api_.py  test_strava_service.py  test_token_handler.py  test_token_manager.py
tests/core/activities/: __init__.py  test_service.py  test_utils.py  test_zones.py
tests/core/streams/: test_exporter.py  test_exporters.py  test_fetcher.py  test_manager.py  test_processor.py
tests/infrastructure/database/: test_database.py
tests/infrastructure/encryptation/: test_encryptor.py
