[project]
name = "strava-analisys"
version = "0.1.0"
description = "Simple (or not) tool to analyze your running workouts using Strava's API"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }  # Cambia esto si usas otra licencia
authors = [{ name = "Alex Algarate", email = "alex@example.com" }]  # Actualiza si quieres
dependencies = [
    "aioresponses>=0.7.8",
    "cryptography>=44.0.2",
    "freezegun>=1.5.1",
    "mypy>=1.15.0",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "ruff>=0.11.6",
    "setuptools>=78.1.0",
    "supabase>=2.15.0",
]

[project.urls]
Homepage = "https://github.com/AlexAlgarate"

[tool.ruff]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints",
    ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype",
    ".ruff_cache", ".svn", ".tox", ".venv", ".vscode", "__pypackages__",
    "_build", "buck-out", "build", "dist", "node_modules", "site-packages", "venv"
]
line-length = 88
indent-width = 4

[tool.ruff.lint]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
