[project]
name = "strava-analisys"
version = "0.1.0"
description = "Tool to analyze your running workouts using Strava's API"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Alex Algarate", email = "alex.algarate@gmail.com" }]
dependencies = [
    "aioresponses>=0.7.8",
    "cryptography>=44.0.3",
    "pandas>=2.2.3",
    "pre-commit>=4.2.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "setuptools>=78.1.0",
    "supabase>=2.15.1",
    "types-requests>=2.32.0.20250328",
    "uv>=0.7.4",
]
[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "freezegun>=1.5.1",
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.3.250308",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.10",
    "types-requests>=2.32.0.20250328",
]
[project.urls]
Homepage = "https://github.com/AlexAlgarate"

[tool.ruff]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints",
    ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype",
    ".ruff_cache", ".svn", ".tox", ".venv", ".vscode", "__pypackages__",
    "_build", "buck-out", "build", "dist", "node_modules", "site-packages", "venv"
]
line-length = 88
indent-width = 4

[tool.ruff.lint]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
